[gd_scene load_steps=4 format=3 uid="uid://dx2o5dlyrmgfy"]

[ext_resource type="PackedScene" uid="uid://bwegnxa4rtgh2" path="res://Scene/UI/TitleBar.tscn" id="1_wglmh"]
[ext_resource type="Script" path="res://Script/UI/FriendPanel.gd" id="1_ynsbe"]
[ext_resource type="LabelSettings" uid="uid://sosklb2t4w3c" path="res://Assets/LabelSetting/UITitleBigerGold.tres" id="3_ayf2h"]

[node name="FriendPanel" type="Panel"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ynsbe")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="TitleBar" parent="MarginContainer/VBoxContainer" instance=ExtResource("1_wglmh")]
unique_name_in_owner = true
layout_mode = 2
title_text = "伙伴详情"

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 30
theme_override_constants/margin_top = 30
theme_override_constants/margin_right = 30
theme_override_constants/margin_bottom = 30

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/MarginContainer"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="MarginContainer/VBoxContainer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 1000)
layout_mode = 2

[node name="Info" type="VBoxContainer" parent="MarginContainer/VBoxContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Names" type="VBoxContainer" parent="MarginContainer/VBoxContainer/MarginContainer/VBoxContainer/Info"]
layout_mode = 2

[node name="RareLabel" type="Label" parent="MarginContainer/VBoxContainer/MarginContainer/VBoxContainer/Info/Names"]
layout_mode = 2
text = "SSR"
label_settings = ExtResource("3_ayf2h")

[node name="TitleLabel" type="Label" parent="MarginContainer/VBoxContainer/MarginContainer/VBoxContainer/Info/Names"]
layout_mode = 2
text = "死神"
label_settings = ExtResource("3_ayf2h")
